# WMA

./: .gitignore  README.md  pyproject.toml
cw/pro1/: project_01.ipynb  test_opencv.py
cw/pro2/: project_02.ipynb  test_cv.py
cw/pro3/: project_03.ipynb  test_cv.py
cw/pro4/: README.md  project_04.ipynb  test_cv.py
cw/pro5/: YOLO_pro5.ipynb  info.txt
cw/pro5/data/dataset/: README.dataset.txt  README.roboflow.txt  data.yaml
cw/pro5/data/dataset/test/labels/: 151123102719-star-wars-questions-18_jpg.rf.8767f372d53edfed167f78a7576d61cd.txt  DO2012H_62e35a902cf11_3600_webp.rf.67da2a9fe0f3be7bc8ba839889f62d7a.txt  STAR-WARS-GWIEZDNE-WOJNY-ROBOT-R2-D2-PUZZLE-3D_jpg.rf.139b8bb46b767458613f64e2720fe059.txt  guy-humans-human-beings-people-folk-persons-human-human-being-laugh-J9YY34_jpg.rf.cc1e853738ca62cc4ab8de681bf32a7b.txt  maltese-dog-on-couch_jpg.rf.43c30f7d9e3b0df46f6210ebd0269ac2.txt  photo_2024-06-04_18-38-36_jpg.rf.eb17bdfde224c98955b8885208ceddaa.txt  photo_27_2024-06-04_18-43-41_jpg.rf.8b19120e651d5e1414e31ba98557bfc5.txt  photo_34_2024-06-04_18-43-41_jpg.rf.bf16e28e4e05150a231e669cebcb28f4.txt  photo_37_2024-06-04_18-43-41_jpg.rf.e7d1485ba8d05fd1d4c2dd5840c74a05.txt  photo_3_2024-06-04_18-43-41_jpg.rf.d5b2babd63735cc520c06a5f66c0de07.txt
cw/pro5/data/dataset/train/labels/: 104558132-R2-D_jpg.rf.2d9b1ad400858dbb3ea9c79b53234557.txt  104558132-R2-D_jpg.rf.3081b698d03ea5ebcedfd3d7d38cacdc.txt  104558132-R2-D_jpg.rf.824e958593edacb450da63077218e911.txt  109912565-56a792935f9b58b7d0ebcd56_jpg.rf.42a5dc78d8b6c3795d5049761ebfd836.txt  (+180 more)
(+17 files in other folders)
